--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <androidx.leanback.tab.LeanbackTabLayout
-        android:id="@+id/tab_layout"
+    <FrameLayout
+        android:id="@+id/mainFl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="84dp" />
 
-    <androidx.leanback.tab.LeanbackViewPager
-        android:id="@+id/view_pager"
+    <FrameLayout
+        android:id="@+id/menuFl"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/transView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black_trans_88"
+            android:visibility="gone" />
+
+        <hibernate.v2.sunshine.ui.widget.SideMenuView
+            android:id="@+id/sideMenuView"
+            android:layout_width="84dp"
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
+            android:elevation="8dp"
+            android:focusableInTouchMode="true"
+            android:paddingTop="80dp" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
