--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -1,183 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.leanback.widget.BrowseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/backdropIv"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.4"
-        android:scaleType="centerCrop"
-        android:elevation="-1dp" />
+        android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="8dp"
-        android:elevation="1dp">
+        <ImageView
+            android:id="@+id/backdropIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.4"
+            android:scaleType="centerCrop"
+            android:elevation="-1dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/currentTempCl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="8dp"
+            android:elevation="1dp">
 
-            <TextView
-                android:id="@+id/currentTempTv"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/currentTempCl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textSize="108sp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/currentTempSymbolTv"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:text="-"
-                tools:text="32" />
+                app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/currentTempSymbolTv"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/currentTempTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textSize="108sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/currentTempSymbolTv"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="-"
+                    tools:text="32" />
+
+                <TextView
+                    android:id="@+id/currentTempSymbolTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="32sp"
+                    app:layout_constraintTop_toTopOf="@id/currentTempTv"
+                    app:layout_constraintBaseline_toBaselineOf="@id/currentTempTv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="°C" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/otherTempCl"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
-                app:layout_constraintTop_toTopOf="@id/currentTempTv"
-                app:layout_constraintBaseline_toBaselineOf="@id/currentTempTv"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="°C" />
+                android:orientation="vertical"
+                android:gravity="bottom"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toTopOf="@id/currentTempCl"
+                app:layout_constraintStart_toEndOf="@id/currentTempCl"
+                app:layout_constraintBottom_toBottomOf="@id/currentTempCl">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/otherTempCl"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="bottom"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@id/currentTempCl"
-            app:layout_constraintStart_toEndOf="@id/currentTempCl"
-            app:layout_constraintBottom_toBottomOf="@id/currentTempCl">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="最高" />
+
+                    <Space
+                        android:layout_width="8dp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/maxTempTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="-"
+                        tools:text="33°C" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="最低" />
+
+                    <Space
+                        android:layout_width="8dp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/minTempTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="-"
+                        tools:text="28°C" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginBottom="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/currentTempCl">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:text="最高" />
+                    android:text="濕度" />
 
                 <Space
-                    android:layout_width="8dp"
+                    android:layout_width="4dp"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/maxTempTv"
+                    android:id="@+id/humidityTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:text="-"
+                    tools:text="90%" />
+
+                <Space
+                    android:layout_width="16dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="體感溫度" />
+
+                <Space
+                    android:layout_width="4dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/feelLikeTempTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="-"
                     tools:text="33°C" />
 
+                <Space
+                    android:layout_width="16dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="下雨機率" />
+
+                <Space
+                    android:layout_width="4dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/popTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    tools:text="43%" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="@id/currentTempCl"
+                app:layout_constraintBottom_toBottomOf="@id/currentTempCl"
+                app:layout_constraintStart_toEndOf="@id/otherTempCl">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:text="最低" />
-
-                <Space
-                    android:layout_width="8dp"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/minTempTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:text="-"
-                    tools:text="28°C" />
-
+                <ImageView
+                    android:id="@+id/weatherIconIv"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/weather_icon_01d" />
             </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/currentTempCl">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="體感溫度" />
-
-            <Space
-                android:layout_width="4dp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/feelLikeTempTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-"
-                tools:text="33°C" />
-
-            <Space
-                android:layout_width="16dp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="下雨機率" />
-
-            <Space
-                android:layout_width="4dp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/popTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="-"
-                tools:text="43%" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="@id/currentTempCl"
-            app:layout_constraintBottom_toBottomOf="@id/currentTempCl"
-            app:layout_constraintStart_toEndOf="@id/otherTempCl">
-
-            <ImageView
-                android:id="@+id/weatherIconIv"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/weather_icon_01d" />
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
 
+</androidx.leanback.widget.BrowseFrameLayout>
