--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,11 @@
     <color name="search_opaque">#ffaa3f</color>
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
+
+    <color name="black_trans_88">#88000000</color>
+    <color name="dark_green">#FF3F51B5</color>
+    <color name="fluorescent_orange">#2196F3</color>
+    <color name="fluorescent_orange_trans">#332196F3</color>
+    <color name="bg_mapview_title">#D82196F3</color>
+    <color name="white">#ffffff</color>
 </resources>
