--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.MyApplication" parent="@style/Theme.AppCompat" />
+    <style name="Theme.MyApplication" parent="@style/Theme.Leanback" />
 </resources>
