--- a/app/src/main/res/layout/card_settings_eta.xml
+++ b/app/src/main/res/layout/card_settings_eta.xml
@@ -37,6 +37,7 @@
             android:ellipsize="marquee"
             android:maxLines="1"
             android:textSize="20sp"
+            android:autoSizeTextType="uniform"
             tools:text="唐明街公園" />
 
         <TextView
@@ -46,6 +47,7 @@
             android:ellipsize="marquee"
             android:maxLines="1"
             android:textSize="12sp"
+            android:text="@string/text_eta_destination"
             tools:text="荃灣西站" />
     </LinearLayout>
 
