--- a/app/src/main/res/layout/view_no_fragment_title.xml
+++ b/app/src/main/res/layout/view_no_fragment_title.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<hibernate.v2.sunshine.ui.eta.CustomTitleView xmlns:android="http://schemas.android.com/apk/res/android"
+<hibernate.v2.sunshine.ui.view.NoFragmentTitleView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/browse_title_group"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
