--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,22 +1,16 @@
 <resources>
 
-    <style name="Theme.MyApplication" parent="@style/Theme.Leanback" />
+    <style name="Theme.MyApplication" parent="Theme.Leanback" />
+
+    <style name="Theme.Fragment.SettingsEta" parent="Theme.MyApplication">
+        <item name="imageCardViewTitleStyle">@style/IconCardTitleStyle</item>
+        <item name="imageCardViewImageStyle">@style/IconCardImageStyle</item>
+        <item name="imageCardViewInfoAreaStyle">@style/IconCardInfoAreaStyle</item>
+    </style>
 
     <style name="Theme.Fragment.Eta" parent="Theme.MyApplication">
-        <item name="browseTitleViewLayout">@layout/fragment_title_eta</item>
+        <item name="baseCardViewStyle">@style/FullCardStyle</item>
+        <item name="browseTitleViewLayout">@layout/view_no_fragment_title</item>
         <item name="browseRowsMarginTop">0dp</item>
-        <item name="itemsVerticalGridStyle">@style/VerticalGridView.FullWidth</item>
-    </style>
-
-    <style name="Theme.MyApplication.SettingEta" parent="Theme.MyApplication">
-        <item name="itemsVerticalGridStyle">@style/VerticalGridView.SettingEta</item>
-    </style>
-
-    <style name="VerticalGridView.FullWidth" parent="@style/Widget.Leanback.GridItems.VerticalGridView">
-
-    </style>
-
-    <style name="VerticalGridView.SettingEta" parent="@style/Widget.Leanback.GridItems.VerticalGridView">
-
     </style>
 </resources>
