--- a/app/src/main/res/layout/card_eta.xml
+++ b/app/src/main/res/layout/card_eta.xml
@@ -17,7 +17,7 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/routeIdTv"
+            android:id="@+id/route_number_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28sp"
