--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="brand_color_kmb">#DE0A20</color>
     <color name="brand_color_ctb">#FFB300</color>
+    <color name="brand_color_gmb">#4CAF50</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
 
     <color name="settings_card_background">#0277BD</color>
