--- a/app/src/main/res/drawable/eta_card_bg_none_selected.xml
+++ b/app/src/main/res/drawable/eta_card_bg_none_selected.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="start">
+    <item>
         <shape>
-            <size android:width="4dp" />
-            <solid android:color="@color/brand_color_gmb" />
+            <solid android:color="@color/eta_card_bg_selected" />
         </shape>
     </item>
 </layer-list>
