--- a/app/src/main/res/drawable/eta_card_classic_bg.xml
+++ b/app/src/main/res/drawable/eta_card_classic_bg.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="start">
-        <shape>
+    <item
+        android:id="@+id/border"
+        android:gravity="start">
+        <shape android:gravity="start">
             <size android:width="4dp" />
             <solid android:color="@color/brand_color_kmb" />
         </shape>
