--- a/app/src/main/res/drawable/eta_card_classic_bg_selected.xml
+++ b/app/src/main/res/drawable/eta_card_classic_bg_selected.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:id="@+id/background">
         <shape>
             <solid android:color="@color/eta_card_bg_selected" />
         </shape>
     </item>
-    <item android:gravity="start">
+    <item
+        android:id="@+id/border"
+        android:gravity="start">
         <shape>
             <size android:width="4dp" />
-            <solid android:color="@color/brand_color_ctb" />
+            <solid android:color="@color/brand_color_kmb" />
         </shape>
     </item>
 </layer-list>
