--- a/app/src/main/res/layout/lb_vertical_grid_full_width.xml
+++ b/app/src/main/res/layout/lb_vertical_grid_full_width.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.leanback.widget.VerticalGridView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/browse_grid"
+    style="@style/VerticalGridView.FullWidth"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:clipToPadding="false"
-    style="@style/VerticalGridView.FullWidth" />
+    tools:listitem="@layout/card_eta" />
