--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,10 @@
     <color name="bg_mapview_title">#D82196F3</color>
     <color name="white">#ffffff</color>
 
-    <color name="brand_color_kmb">#DE0A20</color>
-    <color name="brand_color_ctb">#FFB300</color>
-    <color name="brand_color_gmb">#4CAF50</color>
+    <color name="brand_color_kmb">#D32F2F</color>
+    <color name="brand_color_ctb">#FBC02D</color>
+    <color name="brand_color_nwfb">#7E57C2</color>
+    <color name="brand_color_gmb">#2E7D32</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
 
     <color name="settings_card_background">#0277BD</color>
