--- a/app/src/main/res/drawable/eta_card_line_arrow.xml
+++ b/app/src/main/res/drawable/eta_card_line_arrow.xml
@@ -4,6 +4,6 @@
     android:pivotX="0"
     android:pivotY="0">
     <shape>
-        <solid android:color="@android:color/holo_green_dark" />
+        <solid android:color="@color/brand_color_kmb" />
     </shape>
 </rotate>
