--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,17 +37,12 @@
     </style>
 
     <style name="Eta.Card.RouteNumber" parent="">
-        <item name="android:paddingStart">6dp</item>
-        <item name="android:paddingEnd">6dp</item>
-        <item name="android:layout_marginStart">10dp</item>
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginEnd">0dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
+        <item name="android:textSize">36sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/eta_card_route_number_bg</item>
-        <item name="android:minWidth">60dp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="Eta.Card.RouteNumber.Compact" parent="Eta.Card.RouteNumber">
@@ -68,5 +63,9 @@
 
     <style name="Eta.Card.Unit.Text" parent="">
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Widget.Leanback.GuidanceIconStyle.IconWithPadding" parent="Widget.Leanback.GuidanceIconStyle">
+        <item name="android:padding">24dp</item>
     </style>
 </resources>
